# PyJDB

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: linters.yml  test.yml
docs/: index.md
pyjdb/: __init__.py  config.py  errors.py  fields.py  models.py  types.py  typings.py  utils.py
tests/: test_models.py
tests/fields/: test_string.py
