[tool.poetry]
name = "pyjdb"
version = "0.1.0"
description = "Advanced ORM for creating databases using JSON written in Python."
authors = ["Iliya Hosseini <IHosseini083@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/IHosseini083/PyJDB"
keywords = [
    "orm",
    "json",
    "databases",
    "python",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "LICENSE",
    "pyjdb/py.typed",
]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.19.0"
typesystem = "^0.4.1"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
autoflake = "^1.4"
mypy = "^0.971"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"
pytest = "^7.1.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/IHosseini083/PyJDB/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
